[Cards/Snippets] Fixed an issue with wide snippets (due to long URLs) where the card preview didn't wrap.

--- a/features/cerberusweb.core/resources/css/cerb.css
+++ b/features/cerberusweb.core/resources/css/cerb.css
@@ -421,6 +421,7 @@ PRE.emailbody, DIV.emailbody {
   white-space: -o-pre-wrap;
   word-wrap: break-word;
   _white-space: pre;
+  word-break: break-word;
   font-family: inherit;
   font-size: 12px;
   line-height: 16px;
