--- a/install/extras/developers/css/cerb.css/_cerb-styles.scss
+++ b/install/extras/developers/css/cerb.css/_cerb-styles.scss
@@ -354,6 +354,7 @@ INPUT[type=password] {
 
 PRE.emailbody, DIV.emailbody {
 	@include whitespace-wrap();
+	word-break: break-word;
 	font-family: inherit;
 	font-size: 12px;
 	line-height: 16px;
